[iOS] Remove test for header offset

This CL removes the test for the checking the header offset after coming
back to the NTP. This test is flaky and isn't really testing something
useful.

Bug: 916731
Change-Id: Id0dbb924f2a4a2a11493c208ffbac73abf6d2bc8
Reviewed-on: https://chromium-review.googlesource.com/c/1391680
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619149}
Former-commit-id: 43ba8e63298feeea7138694376f65cb93729e754