ios/chrome/browser/ui/content_suggestions/ntp_home_test_utils.mm
@@ -85,21 +85,6 @@ id<GREYMatcher> OmniboxWidthBetween(CGFloat width, CGFloat margin) {
                                               descriptionBlock:describe];
 }
 
-id<GREYMatcher> HeaderPinnedOffset(CGFloat offset) {
-  MatchesBlock matches = ^BOOL(UIView* view) {
-    return view.frame.origin.y == offset;
-  };
-  DescribeToBlock describe = ^void(id<GREYDescription> description) {
-    [description
-        appendText:[NSString
-                       stringWithFormat:@"CSHeader has correct offset: %g",
-                                        offset]];
-  };
-
-  return [[GREYElementMatcherBlock alloc] initWithMatchesBlock:matches
-                                              descriptionBlock:describe];
-}
-
 UICollectionView* CollectionView() {
   return base::mac::ObjCCast<UICollectionView>(
       SubviewWithAccessibilityIdentifier(
